changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

plugins/cfpython/cjson.c: Add support for Python 3. For Python 3 we always
  encode to Bytes but can decode both Bytes and Unicode. For decoded strings the
  default is to use Unicode under Python 3 (and under 2.x we still default to
  String).
plugins/cfpython/cfpython: Support for Python 3. This involves some changes for
  Python 2.x too in order to make it possible to maintain the code. Some of the
  Python 3.x specific code for caching bytecode is rather messy and could be
  probably be improved. The way the constant modules are created has been
  changed to support both Python 2.x and 3.x (now using PyModule_New()).
Arvid Norlander 2009-02-27

server/attack.c: Fix for bug 1922771: xp non zero in meditation.  In 
    poison_living(), do some more work to find proper skill to set to credit
    the exp gain - for players, op->skill doesn't look like it is set,
    but op->chosen_skill is.
MSW 2009-02-26
	
autogen.sh: Error out if the various programs called aren't successful. This
  means we can hopefully get the first error in bug reports instead of errors
  caused by the first error later.
Arvid Norlander 2009-02-26

server/attack.c: Fix for bug 2019648: Too high experience gain with draining
    monsters.  Don't add more exp to monsters than the player lost by draining.
    Record original exp of player before draining and use that as a check in
    MIN() statement - because from old code, divisor is twice as much as
    we remove, very likely the old method will be less than actual lost exp.
MSW 2009-02-25
